<resources>
    <string name="app_name">Help The Bird</string>
    <string name="info">The innocent bird needs to reach 200 point in order to escape from enemies and reach its nest. Can you help the bird in this challenging task?</string>
    <string name="bird">Bird</string>
    <string name="enemy_1">Enemy 1</string>
    <string name="enemy_2">Enemy 2</string>
    <string name="enemy_3">Enemy 3</string>
    <string name="_10_points">10 Points</string>
    <string name="start_game">Start Game</string>
</resources>