<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="end"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/volume_up"
        tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bird"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/bird"
                tools:ignore="VectorDrawableCompat"
                android:padding="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bird"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/enemy1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                app:srcCompat="@drawable/enemy1"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enemy_1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/enemy2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/enemy2"
                tools:ignore="VectorDrawableCompat"
                android:padding="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enemy_2"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/enemy3"
                android:layout_width="120dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/enemy3"
                tools:ignore="VectorDrawableCompat"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enemy_3"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/coin"
                android:layout_width="85dp"
                android:layout_height="85dp"
                app:srcCompat="@drawable/coin"
                tools:ignore="VectorDrawableCompat"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_points"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/info"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center"/>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_start_button"
        app:backgroundTint="@android:color/white"
        app:backgroundTintMode="multiply"
        android:text="@string/start_game"
        android:textSize="30sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:text="Yashar | July 2021"
        android:textSize="18sp"
        android:textColor="@android:color/holo_orange_light"
        android:gravity="center"/>


</LinearLayout>